# neural_network

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build  check  compile_commands.json  net.json  premake  premake5.lua
.clangd/index/: BaseCube_bones.hpp.20CB6A90E2AD618A.idx  BaseCube_meat.hpp.FC4CA300A96B7B1C.idx  Base_bones.hpp.A9CED544EA9EF74F.idx  Base_meat.hpp.C70C329706F56383.idx  Col_bones.hpp.AAE66EECC1E36759.idx  Col_meat.hpp.6772F11F3E4CC18A.idx  CubeToMatOp_bones.hpp.19CA0EAF846443BC.idx  CubeToMatOp_meat.hpp.F1D559A7EDA0AAA5.idx  Cube_bones.hpp.0B58CEF39A963A78.idx  Cube_meat.hpp.45DF007317F1E71C.idx  GenCube_bones.hpp.F959A24F75572704.idx  GenCube_meat.hpp.64A688BD3E62DF47.idx  GenSpecialiser.hpp.F5A4AAE167022F99.idx  Gen_bones.hpp.970196576156705E.idx  Gen_meat.hpp.849F15F4499811A9.idx  GlueCube_bones.hpp.F874B00D42397C63.idx  GlueCube_meat.hpp.482758D986DF88EB.idx  Glue_bones.hpp.5B49EE179C9EBBA5.idx  Glue_meat.hpp.FF75CCBD23AE5863.idx  MapMat_bones.hpp.0A50DC82F295065B.idx  MapMat_meat.hpp.178CCFE2D8D5DD20.idx  Mat_bones.hpp.3CE6B69D2E0155B5.idx  Mat_meat.hpp.6780D6431DF9BF9A.idx  OpCube_bones.hpp.C6284E8CAB6ED01A.idx  OpCube_meat.hpp.BCDC9A298C642544.idx  Op_bones.hpp.35E5DDCC397ED8EA.idx  Op_meat.hpp.8D7D963A65EABE3E.idx  Proxy.hpp.8E5DCC7393139B37.idx  ProxyCube.hpp.0B96B9045B66BE36.idx  Row_bones.hpp.6CEA1B81EEB11328.idx  Row_meat.hpp.2EA7BFFF09911260.idx  SizeCube_bones.hpp.D42A9B7B3F70EA99.idx  SizeCube_meat.hpp.555DE111CD5D63F5.idx  (+554 more)
build_db/: CMakeCache.txt  cmake_install.cmake
digit_recognition/: CMakeLists.txt  Makefile  premake5.lua
digit_recognition/src/: costs.cpp  costs.h  data.h  learn_cfg.h  log.cpp  log.h  main.cpp  network.cpp  network.cpp_  network.h  pch.h  read_mnist.cpp  read_mnist.h  sigmoid.h
digit_recognition/src/net/: hyper_surfer.cpp  hyper_surfer.h  learn.cpp  learn.h  learn_cfg.h  net.h  setup.cpp  setup.h
football/: CMakeLists.txt
n_build/: CMakeCache.txt  cmake_install.cmake
neural_net/: CMakeLists.txt
neural_net/include/: neural_net.h
neural_net/src/: costs.cpp  costs.h  data.h  log.cpp  log.h  pch.h  sigmoid.h  utils.h
neural_net/src/hyper/: data.h  hyper_surfer.cpp  hyper_surfer.h
neural_net/src/learn/: eval.cpp  eval.h  evaluator.cpp  evaluator.h  learn.cpp  learn.h
neural_net/src/main/: log.cpp
neural_net/src/net/: costs.cpp  costs.h  hyper_surfer.cpp  hyper_surfer.h  learn.cpp  learn.h  net.h  setup.cpp  setup.h  sigmoid.h
(+1204 files in other folders)
